--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -501,7 +501,8 @@ en:
       registration_stickers: Registration stickers
       resources: Resources
       search_bikes: Search bikes
-      settings: "%{user_email} settings"
+      settings: Settings
+      user_settings: "%{user_email} settings"
       sign_up: Sign up
       super_admin_view: Super Admin view %{org_name}
       the_nonprofit_bike_registry: the non-profit bike registry
